force-app/main/default/objects/uNI_ProjectActivities__c/uNI_ProjectActivities__c.object-meta.xml
<CustomObject>
    <label>Project Activity</label>
    <nameField>
        <displayFormat>Act-{0000}</displayFormat>
        <label>Project Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>