force-app/main/default/objects/uNI_ProjectActivities__c/fields/uNI_Activity__c.field-meta.xml
<CustomField>
    <fullName>uNI_Activity__c</fullName>
    <label>Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>