force-app/main/default/objects/uNI_ProjectActivities__c/fields/uNI_ActivityNarrative__c.field-meta.xml
<CustomField>
    <fullName>uNI_ActivityNarrative__c</fullName>
    <label>Activity Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>