force-app/main/default/objects/uNI_ProjectActivities__c/fields/uNI_PortfolioOutput__c.field-meta.xml
<CustomField>
    <fullName>uNI_PortfolioOutput__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Output</label>
    <referenceTo>uNI_PortfolioOutput__c</referenceTo>
    <relationshipLabel>Project Activities</relationshipLabel>
    <relationshipName>uNI_ProjectActivities</relationshipName>
    <type>Lookup</type>
</CustomField>